--- a/css/site.css
+++ b/css/site.css
@@ -309,10 +309,10 @@ nav.next-prev-project li {
   list-style: none;
   flex: 1 0 50%; /* flex-grow, flex-shrink, flex-basis */
 }
-nav.next-prev-project li:nth-child(1) {
+nav.next-prev-project li:first-child {
   padding-left: 10rem;
 }
-nav.next-prev-project li:nth-child(2) {
+nav.next-prev-project li:last-child {
   text-align: right;
   padding-right: 10rem;
 }
@@ -320,7 +320,7 @@ nav.next-prev-project header {
   color: silver;
 }
 nav.next-prev-project a {
-  font-size: 1.5rem;
+  font-size: 1.5em;
   text-transform: uppercase;
 }
 
@@ -467,6 +467,12 @@ body.touch-device #featured-projects .overlay .link::after {
   .project-description {
     padding: 2rem 4rem 4rem 4rem;
   }
+  nav.next-prev-project li:first-child {
+    padding-left: 5rem;
+  }
+  nav.next-prev-project li:last-child {
+    padding-right: 5rem;
+  }
 }
 
 @media only screen and (max-width : 900px) {
@@ -478,6 +484,10 @@ body.touch-device #featured-projects .overlay .link::after {
 @media only screen and (max-width : 667px) {
   html, body {
     font-size: 10.5px;
+  }
+  #menu-toggle {
+    width: 40px;
+    top: 20px; /* align smaller font size */
   }
   #site-tagline p {
     font-size: 1.5em;
@@ -506,6 +516,15 @@ body.touch-device #featured-projects .overlay .link::after {
     flex-basis: 100% !important; /* expand images so overlay text is still readable */
     height: 250px;
   }
+  nav.next-prev-project a {
+    font-size: 1.25em;
+  }
+  nav.next-prev-project li:first-child {
+    padding-left: 1rem;
+  }
+  nav.next-prev-project li:last-child {
+    padding-right: 1rem;
+  }
 }
 
 @media only screen and (max-width : 320px) {
@@ -514,5 +533,8 @@ body.touch-device #featured-projects .overlay .link::after {
   }
   #menu-toggle {
     top: 15px; /* align with smaller header */
+  }
+  nav.next-prev-project a {
+    font-size: 1.15em;
   }
 }
