--- a/css/site.css
+++ b/css/site.css
@@ -127,7 +127,7 @@ nav#slideout-menu.open {
 .overlay * {
   position: relative;
   left: -100vw; /* offscreen to the left */
-  /* transition: left .5s ease-in-out; */
+  transition: left .5s ease-in-out;
 }
 .active-slide .overlay * {
   left: 0;
